--- a/index.html
+++ b/index.html
@@ -1,36 +1,18 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html>
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>LAILA IA</title>
-
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
+<meta charset="UTF-8">
+<title>Laila IA</title>
 
 <style>
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Inter', sans-serif;
-}
-
 body {
-  background: linear-gradient(135deg, #0a0a0a, #111827);
-  color: white;
+  margin: 0;
+  background: #0a0f1c;
+  font-family: 'Segoe UI', sans-serif;
   display: flex;
   flex-direction: column;
   height: 100vh;
-}
-
-header {
-  padding: 15px;
-  text-align: center;
-  font-weight: 800;
-  font-size: 22px;
-  background: #000;
-  border-bottom: 1px solid #1f2937;
-  letter-spacing: 2px;
+  color: white;
 }
 
 #chat {
@@ -39,65 +21,52 @@ header {
   padding: 20px;
   display: flex;
   flex-direction: column;
-  gap: 12px;
 }
 
 .message {
-  max-width: 80%;
-  padding: 12px 16px;
-  border-radius: 16px;
-  line-height: 1.4;
-  animation: fadeIn 0.2s ease-in-out;
+  padding: 12px 15px;
+  border-radius: 15px;
+  margin-bottom: 10px;
+  max-width: 70%;
+  animation: fadeIn 0.3s ease-in-out;
 }
 
 .user {
+  background: #2563eb;
   align-self: flex-end;
-  background: #1f2937;
 }
 
 .bot {
+  background: #111827;
+  border: 1px solid #00f7ff;
+  box-shadow: 0 0 10px #00f7ff44;
   align-self: flex-start;
-  background: #0f766e;
 }
 
-footer {
+#inputArea {
   display: flex;
   padding: 15px;
-  background: #000;
-  border-top: 1px solid #1f2937;
-  gap: 10px;
+  background: #111827;
 }
 
 input {
   flex: 1;
   padding: 12px;
-  border-radius: 12px;
+  border-radius: 10px;
   border: none;
+  outline: none;
   background: #1f2937;
   color: white;
-  font-size: 16px;
 }
 
 button {
-  padding: 12px 18px;
-  border-radius: 12px;
+  margin-left: 10px;
+  padding: 12px 20px;
   border: none;
-  background: #10b981;
-  color: black;
-  font-weight: 600;
+  border-radius: 10px;
+  background: #00f7ff;
   cursor: pointer;
-  transition: 0.2s;
-}
-
-button:hover {
-  background: #34d399;
-}
-
-.status {
-  font-size: 12px;
-  opacity: 0.6;
-  text-align: center;
-  padding: 4px;
+  font-weight: bold;
 }
 
 @keyframes fadeIn {
@@ -109,69 +78,56 @@ button:hover {
 
 <body>
 
-<header>LAILA</header>
-
 <div id="chat"></div>
 
-<div class="status" id="status">Online</div>
-
-<footer>
-  <input id="input" type="text" placeholder="Fale com Laila..." />
+<div id="inputArea">
+  <input id="input" placeholder="Digite sua mensagem..." />
   <button onclick="sendMessage()">Enviar</button>
-</footer>
+</div>
 
 <script>
-const chat = document.getElementById("chat");
-const input = document.getElementById("input");
-const statusText = document.getElementById("status");
-
-function addMessage(text, sender) {
-  const div = document.createElement("div");
-  div.classList.add("message", sender);
-  div.innerText = text;
-  chat.appendChild(div);
-  chat.scrollTop = chat.scrollHeight;
-}
-
 async function sendMessage() {
-  const text = input.value.trim();
+  const input = document.getElementById("input");
+  const chat = document.getElementById("chat");
+  const text = input.value;
   if (!text) return;
 
-  addMessage(text, "user");
+  chat.innerHTML += `<div class="message user">${text}</div>`;
   input.value = "";
-  statusText.innerText = "Laila está pensando...";
+  chat.scrollTop = chat.scrollHeight;
 
-  try {
-    const response = await fetch("/api/chat", {
-      method: "POST",
-      headers: {
-        "Content-Type": "application/json"
-      },
-      body: JSON.stringify({ message: text })
-    });
+  const loading = document.createElement("div");
+  loading.className = "message bot";
+  loading.innerText = "Digitando...";
+  chat.appendChild(loading);
+  chat.scrollTop = chat.scrollHeight;
 
-    const data = await response.json();
+  const response = await fetch("/api/chat", {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({ message: text })
+  });
 
-    if (data.reply) {
-      addMessage(data.reply, "bot");
-    } else {
-      addMessage("Erro na resposta.", "bot");
-      console.log(data);
-    }
+  const data = await response.json();
 
-  } catch (err) {
-    addMessage("Erro de conexão com o servidor.", "bot");
-    console.error(err);
-  }
+  loading.remove();
 
-  statusText.innerText = "Online";
+  typeEffect(data.reply, chat);
 }
 
-input.addEventListener("keypress", function(e) {
-  if (e.key === "Enter") {
-    sendMessage();
-  }
-});
+function typeEffect(text, chat) {
+  const msg = document.createElement("div");
+  msg.className = "message bot";
+  chat.appendChild(msg);
+
+  let i = 0;
+  const interval = setInterval(() => {
+    msg.innerHTML += text.charAt(i);
+    i++;
+    chat.scrollTop = chat.scrollHeight;
+    if (i >= text.length) clearInterval(interval);
+  }, 20);
+}
 </script>
 
 </body>
